{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 226,
  "lineage": "bb732695-2c78-e39f-ac07-cd8c1744047e",
  "resources": [
    {
      "module": "module.eks_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:security-group/sg-049d28d9d4610f6e1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049d28d9d4610f6e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow 443 from specified CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-gateway-cluster-sg",
            "name_prefix": "",
            "owner_id": "721500739616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "eks-gateway",
              "Project": "multi-vpc-eks"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "eks-gateway",
              "Project": "multi-vpc-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e49e45d9ec366d1b",
            "arn": "arn:aws:ec2:us-west-2:721500739616:elastic-ip/eipalloc-0e49e45d9ec366d1b",
            "domain": "vpc",
            "id": "eipalloc-0e49e45d9ec366d1b",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-164-109-14.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.109.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-gateway-nat-eip"
            },
            "tags_all": {
              "Name": "vpc-gateway-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:internet-gateway/igw-0a789798c919d062c",
            "id": "igw-0a789798c919d062c",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-gateway-igw"
            },
            "tags_all": {
              "Name": "vpc-gateway-igw"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e49e45d9ec366d1b",
            "association_id": "eipassoc-05716dfed163bd630",
            "connectivity_type": "public",
            "id": "nat-0227a2e5094722948",
            "network_interface_id": "eni-09dbfec1227c22b9d",
            "private_ip": "10.10.1.102",
            "public_ip": "35.164.109.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cde07edee3714a8f",
            "tags": {
              "Name": "vpc-gateway-nat-gw"
            },
            "tags_all": {
              "Name": "vpc-gateway-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat_eip",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02f6d4a7c12ca5eb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0227a2e5094722948",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_eip.nat_eip",
            "module.vpc_gateway.aws_nat_gateway.nat",
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a789798c919d062c",
            "id": "r-rtb-0df7aa22b94190c451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_internet_gateway.igw",
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-02f6d4a7c12ca5eb9",
            "id": "rtb-02f6d4a7c12ca5eb9",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-gateway-private-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:route-table/rtb-0df7aa22b94190c45",
            "id": "rtb-0df7aa22b94190c45",
            "owner_id": "721500739616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-gateway-public-rt"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf6456c674eb637",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "subnet_id": "subnet-0fc7365ef79e86f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afa1d9d666179bfe",
            "route_table_id": "rtb-02f6d4a7c12ca5eb9",
            "subnet_id": "subnet-0e4e753ee050db38a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.private",
            "module.vpc_gateway.aws_subnet.private",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6a54963d744decd",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "subnet_id": "subnet-0cde07edee3714a8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ac8ca3e7510bf7c",
            "route_table_id": "rtb-0df7aa22b94190c45",
            "subnet_id": "subnet-00d7365fa25fffa9f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_route_table.public",
            "module.vpc_gateway.aws_subnet.public",
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0fc7365ef79e86f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc7365ef79e86f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-private-1"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-1"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0e4e753ee050db38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e753ee050db38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-private-2"
            },
            "tags_all": {
              "Name": "vpc-gateway-private-2"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-0cde07edee3714a8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde07edee3714a8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-public-1"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-1"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:subnet/subnet-00d7365fa25fffa9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d7365fa25fffa9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "721500739616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-gateway-public-2"
            },
            "tags_all": {
              "Name": "vpc-gateway-public-2"
            },
            "vpc_id": "vpc-090feb488bedbcb62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_gateway.aws_vpc.vpc",
            "module.vpc_gateway.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_gateway",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:721500739616:vpc/vpc-090feb488bedbcb62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08e2e7b5fd1878f7d",
            "default_route_table_id": "rtb-0174197b53cd288c1",
            "default_security_group_id": "sg-0ba47e62e3e13f42a",
            "dhcp_options_id": "dopt-0848e66d7f6f5a487",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090feb488bedbcb62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0174197b53cd288c1",
            "owner_id": "721500739616",
            "tags": {
              "Name": "vpc-gateway-vpc"
            },
            "tags_all": {
              "Name": "vpc-gateway-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}